px removed from img sizes

--- a/testhtml/atlantida00/index.html
+++ b/testhtml/atlantida00/index.html
@@ -44,7 +44,7 @@
           <div class="container">
             <div class="slider-prev">
                 <a href="#services-id">
-                  <img src="img/slider-prev.png" height="34px" width="34px">
+                  <img src="img/slider-prev.png" height="34" width="34">
                 </a>
             </div>
             <div class="slider-data">
@@ -74,23 +74,23 @@
             <div class="about-us-row-items">
 
               <div class="about-us-item">
-                <img src="img/aubout-us-item-1.png" width="41px" height="38px" >
+                <img src="img/aubout-us-item-1.png" width="41" height="38" >
                 <span class="about-us-item-title">awards<br> winner</span>
                 <span class="about-us-item-number">54</span>
               </div>
 
               <div class="about-us-item">
-                <img src="img/aubout-us-item-2.png" width="41px" height="40px">
+                <img src="img/aubout-us-item-2.png" width="41" height="40">
                 <span class="about-us-item-title">jobs<br> done</span>
                 <span class="about-us-item-number">1054</span>
               </div>
               <div class="about-us-item">
-                <img src="img/aubout-us-item-3.png" width="33px" height="39px">
+                <img src="img/aubout-us-item-3.png" width="33" height="39">
                 <span class="about-us-item-title">happy<br> clients</span>
                 <span class="about-us-item-number">120</span>
               </div>
               <div class="about-us-item">
-                <img src="img/aubout-us-item-4.png" width="41px" height="37px">
+                <img src="img/aubout-us-item-4.png" width="41" height="37">
                 <span class="about-us-item-title">reviews<br> recieved</span>
                 <span class="about-us-item-number">54</span>
               </div>
@@ -105,28 +105,28 @@
             <div class="services-row-item">
               <div class="services-item">
                 <div class="services-img">
-                  <img src="img/services-item-1.png" width="26px" height="25px">
+                  <img src="img/services-item-1.png" width="26" height="25">
                 </div>
                 <span class="services-item-title">graphic<br> design</span>
                 <span class="services-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sed ipsum pulvinar, consequat ipsum non, sodales augue. Donec dapibus ipsum rutrum congue egestas. Curabitur fringilla tortor non aliquam congue. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</span>
               </div>
               <div class="services-item">
                 <div class="services-img">
-                  <img src="img/services-item-2.png" width="27px" height="21px">
+                  <img src="img/services-item-2.png" width="27" height="21">
                 </div>
                 <span class="services-item-title">website<br> design</span>
                 <span class="services-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sed ipsum pulvinar, consequat ipsum non, sodales augue. Donec dapibus ipsum rutrum congue egestas. Curabitur fringilla tortor non aliquam congue. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</span>
               </div>
               <div class="services-item">
                 <div class="services-img">
-                  <img src="img/services-item-3.png" width="24px" height="22px">
+                  <img src="img/services-item-3.png" width="24" height="22">
                 </div>
                 <span class="services-item-title">seo & <br> analitycs</span>
                 <span class="services-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sed ipsum pulvinar, consequat ipsum non, sodales augue. Donec dapibus ipsum rutrum congue egestas. Curabitur fringilla tortor non aliquam congue. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</span>
               </div>
               <div class="services-item">
                 <div class="services-img">
-                  <img src="img/services-item-4.png" width="21px" height="21px">
+                  <img src="img/services-item-4.png" width="21" height="21">
                 </div>
                 <span class="services-item-title">wordpress <br>programming</span>
                 <span class="services-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sed ipsum pulvinar, consequat ipsum non, sodales augue. Donec dapibus ipsum rutrum congue egestas. Curabitur fringilla tortor non aliquam congue. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</span>
