--- a/testhtml/atlantida00/index.html
+++ b/testhtml/atlantida00/index.html
@@ -194,11 +194,9 @@
                   <span class="history-item-date">
                     07 October 2015
                   </span>
-                  <span class="history-item-text">
-                    <p>
+                  <p class="history-item-text">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sed ipsum pulvinar, consequat ipsum non, sodales augue. Donec dapibus ipsum rutrum congue egestas. Curabitur fringilla tortor non aliquam congue. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
-                    </p>
-                  </span>
+                  </p>
                 </div>
                 <div class="history-item">
                   <span class="history-item-title">
@@ -207,13 +205,12 @@
                   <span class="history-item-date">
                     07 May 2015
                   </span>
-                  <span class="history-item-text">
-                    <p>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sed ipsum pulvinar, consequat ipsum non, sodales augue. Donec dapibus ipsum rutrum congue egestas. Curabitur fringilla tortor non aliquam congue. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
-                    </p>
-                    <p>
+                  <p class="history-item-text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sed ipsum pulvinar, consequat ipsum non, sodales augue. Donec dapibus ipsum rutrum congue egestas. Curabitur fringilla tortor non aliquam congue. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+                  </p>
+                  <p class="history-item-text">
                       Praesent id augue in risus molestie euismod molestie id augue. Suspendisse a libero porttitor, lobortis eros ac, varius velit. Praesent sed eros at elit suscipit laoreet vitae condimentum risus.
-                    </p>
+                  </p>
                  </span>
                 </div>
                 <div class="history-item">
@@ -223,11 +220,9 @@
                   <span class="history-item-date">
                     07 October 2015
                   </span>
-                  <span class="history-item-text">
-                    <p>
+                  <p class="history-item-text">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sed ipsum pulvinar, consequat ipsum non, sodales augue. Donec dapibus ipsum rutrum congue egestas. Curabitur fringilla tortor non aliquam congue. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
-                    </p>
-                  </span>
+                  </p>
                 </div>
               </div>
 
@@ -239,7 +234,9 @@
         <div class="main-ourteam">
           <div class="container">
             <h2>OUR TEAM</h2>
-            <span="ourteam-text"> Nullam eu erat ut purus placerat blandit eu vel nisl. Suspendisse eleifend, erat ut aliquet dictum, tortor est faucibus libero, a posuere quam quam sit amet sapien.</span>
+            <span class="ourteam-text">
+              Nullam eu erat ut purus placerat blandit eu vel nisl. Suspendisse eleifend, erat ut aliquet dictum, tortor est faucibus libero, a posuere quam quam sit amet sapien.
+            </span>
             <div class="outeam-item">
             </div>
           </div>
