--- a/testhtml/atlantida00/index.html
+++ b/testhtml/atlantida00/index.html
@@ -44,7 +44,7 @@
           <div class="container">
             <div class="slider-prev">
                 <a href="#services-id">
-                  <img src="img/slider-prev.png" height="34" width="34">
+                  <img src="img/slider-prev.png" height="34" width="34" alt="">
                 </a>
             </div>
             <div class="slider-data">
@@ -54,7 +54,7 @@
             </div>
             <div class="slider-next">
                 <a href="#history-id">
-                  <img src="img/slider-next.png" height="34px" width="34px">
+                  <img src="img/slider-next.png" height="34" width="34" alt="">
                 </a>
             </div>
           </div>
@@ -152,11 +152,9 @@
                   <span class="history-item-date">
                     07 October 2015
                   </span>
-                  <span class="history-item-text">
-                    <p>
+                  <p class="history-item-text">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sed ipsum pulvinar, consequat ipsum non, sodales augue. Donec dapibus ipsum rutrum congue egestas. Curabitur fringilla tortor non aliquam congue. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
-                    </p>
-                  </span>
+                  </p>
                 </div>
                 <div class="history-item">
                   <span class="history-item-title">
@@ -165,11 +163,9 @@
                   <span class="history-item-date">
                     07 May 2015
                   </span>
-                  <span class="history-item-text">
-                    <p>
+                  <p class="history-item-text">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sed ipsum pulvinar, consequat ipsum non, sodales augue. Donec dapibus ipsum rutrum congue egestas. Curabitur fringilla tortor non aliquam congue. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
-                    </p>
-                  </span>
+                  </p>
                 </div>
                 <div class="history-item">
                   <span class="history-item-title">
@@ -178,10 +174,9 @@
                   <span class="history-item-date">
                     07 October 2015
                   </span>
-                  <span class="history-item-text">
-                    <p>
+                  <p class="history-item-text">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sed ipsum pulvinar, consequat ipsum non, sodales augue. Donec dapibus ipsum rutrum congue egestas. Curabitur fringilla tortor non aliquam congue. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
-                    </p>
+                  </p>
                   </span>
                 </div>
               </div>
