stray span 180 removed

--- a/testhtml/atlantida00/index.html
+++ b/testhtml/atlantida00/index.html
@@ -90,7 +90,7 @@
                 <span class="about-us-item-number">120</span>
               </div>
               <div class="about-us-item">
-                <img src="img/aubout-us-item-4.png" width="41" height="37">
+                <img src="img/aubout-us-item-4.png" width="41" height="37" alt="">
                 <span class="about-us-item-title">reviews<br> recieved</span>
                 <span class="about-us-item-number">54</span>
               </div>
@@ -173,11 +173,9 @@
                   </span>
                   <span class="history-item-date">
                     07 October 2015
-                  </span>
                   <p class="history-item-text">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sed ipsum pulvinar, consequat ipsum non, sodales augue. Donec dapibus ipsum rutrum congue egestas. Curabitur fringilla tortor non aliquam congue. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
                   </p>
-                  </span>
                 </div>
               </div>
 
