history/divider with items added

--- a/testhtml/atlantida00/index.html
+++ b/testhtml/atlantida00/index.html
@@ -180,6 +180,18 @@
                 </div>
               </div>
 
+              <div class="c-divider">
+                <div class="c-top">
+                  <span>2015</span>
+                </div>
+                <div class="c-middle">
+                  <span>2014</span>
+                </div>
+                <div class="c-bottom">
+                  <img src="img/history-start.png" width="25" height="23" alt="">
+                </div>
+              </div>
+
               <div class="right-column">
                 <div class="history-item">
                   <span class="history-item-title">
@@ -218,6 +230,8 @@
                   </p>
                 </div>
               </div>
+
+
 
             </div>
 
