history/left column/border added

--- a/testhtml/atlantida00/index.html
+++ b/testhtml/atlantida00/index.html
@@ -43,7 +43,7 @@
         <div class="slider">
           <div class="container">
             <div class="slider-prev">
-                <a href="#services-id">
+                <a href="#history-id">
                   <img src="img/slider-prev.png" height="34" width="34" alt="">
                 </a>
             </div>
