--- a/testhtml/atlantida00/index.html
+++ b/testhtml/atlantida00/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="css/style.css">
         <title>Atlantida</title>
-        <link rel="shortcut icon" href="img/favicon-A.png"">
+        <link rel="shortcut icon" href="img/favicon-A.png">
         <link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Crimson+Text' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
