--- a/testhtml/atlantida00/index.html
+++ b/testhtml/atlantida00/index.html
@@ -21,7 +21,7 @@
               <li><a href="#">Home</a></li>
               <li><a href="#aboutus-id">About</a></li>
               <li><a href="#services-id">Services</a></li>
-              <li><a href="#">Team</a></li>
+              <li><a href="#ourteam-id">Team</a></li>
               <li><a href="#">Portfolio</a></li>
               <li><a href="#">Prices</a></li>
               <li><a href="#">Blog</a></li>
@@ -238,13 +238,19 @@
           </div>
         </div>
 
-        <div class="main-ourteam">
+        <div class="ourteam" id="ourteam-id">
           <div class="container">
             <h2>OUR TEAM</h2>
-            <span class="ourteam-text">
-              Nullam eu erat ut purus placerat blandit eu vel nisl. Suspendisse eleifend, erat ut aliquet dictum, tortor est faucibus libero, a posuere quam quam sit amet sapien.
+            <span class="text-under-h2">
+              Nullam lobortis, turpis lobortis placerat vehicula, ipsum lacus bibendum dolor, sit amet pretium odio magna eget risus. Phasellus iaculis ultricies duiNullam lobortis, turpis lobortis placerat vehicula, ipsum lacus bibendum dolor, sit amet pretium odio magna eget risus.
             </span>
-            <div class="outeam-item">
+            <div class="outeam-item-row">
+              <div class="ourteam-item">
+              </div>
+              <div class="ourteam-item">
+              </div>
+              <div class="ourteam-item">
+              </div>
             </div>
           </div>
         </div>
