slider styles updated

--- a/testhtml/atlantida00/index.html
+++ b/testhtml/atlantida00/index.html
@@ -5,7 +5,6 @@
         <link rel="stylesheet" href="css/style.css">
         <title>Atlantida</title>
         <link rel="shortcut icon" href="img/favicon-A.png">
-        <link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Crimson+Text' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
     </head>
@@ -21,6 +20,7 @@
               <li><a href="#">Home</a></li>
               <li><a href="#aboutus-id">About</a></li>
               <li><a href="#services-id">Services</a></li>
+              <li><a href="#history-id">History</a></li>
               <li><a href="#ourteam-id">Team</a></li>
               <li><a href="#">Portfolio</a></li>
               <li><a href="#">Prices</a></li>
@@ -43,17 +43,17 @@
         <div class="slider">
           <div class="container">
             <div class="slider-prev">
-                <a href="#history-id">
+                <a href="#">
                   <img src="img/slider-prev.png" height="34" width="34" alt="">
                 </a>
             </div>
             <div class="slider-data">
-              <span class="text-slider">Design Studio and Digital Agency</span>
+              <p class="text-slider">Design Studio and Digital Agency</p>
               <h1>We are Atlantida</h1>
-              <a class="btn btn-get-started" href="#aboutus-id">Get Started</a>
+              <a class="btn-get-started" href="#aboutus-id">Get Started</a>
             </div>
             <div class="slider-next">
-                <a href="#history-id">
+                <a href="#">
                   <img src="img/slider-next.png" height="34" width="34" alt="">
                 </a>
             </div>
