ourteam/member card finished

--- a/testhtml/atlantida00/index.html
+++ b/testhtml/atlantida00/index.html
@@ -246,10 +246,42 @@
             </span>
             <div class="outeam-item-row">
               <div class="ourteam-item">
+                <div class="ourteam-item-child">
+                  <div class="ourteam-card">
+                    <span>Full Name</span>
+                    <span>responsibility</span>
+                    <span>
+                      <a class="soc-fb" href="#"><img src="img/ourteam-soc-fb.png" width="11" height="10" alt=""></a>
+                      <a class="soc-tw" href="#"><img src="img/ourteam-soc-tw.png" width="11" height="9" alt=""></a>
+                      <a class="soc-be" href="#"><img src="img/ourteam-soc-be.png" width="16" height="10" alt=""></a>
+                  </div>
+                </div>
               </div>
               <div class="ourteam-item">
+                <div class="ourteam-item-child">
+                  <div class="ourteam-card">
+                    <span>Full Name</span>
+                    <span>responsibility</span>
+                    <span>
+                      <a class="soc-fb" href="#"><img src="img/ourteam-soc-fb.png" width="11" height="10" alt=""></a>
+                      <a class="soc-tw" href="#"><img src="img/ourteam-soc-tw.png" width="11" height="9" alt=""></a>
+                      <a class="soc-be" href="#"><img src="img/ourteam-soc-be.png" width="16" height="10" alt=""></a>
+                    </span>
+                  </div>
+                </div>
               </div>
               <div class="ourteam-item">
+                <div class="ourteam-item-child">
+                  <div class="ourteam-card">
+                    <span>Jilia Smith</span>
+                    <span>designer</span>
+                    <span>
+                      <a class="soc-fb" href="#"><img src="img/ourteam-soc-fb.png" width="11" height="10" alt=""></a>
+                      <a class="soc-tw" href="#"><img src="img/ourteam-soc-tw.png" width="11" height="9" alt=""></a>
+                      <a class="soc-be" href="#"><img src="img/ourteam-soc-be.png" width="16" height="10" alt=""></a>
+                    </span>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
