h2 & text-under-h2 lineheight removed, padding added

--- a/testhtml/atlantida00/index.html
+++ b/testhtml/atlantida00/index.html
@@ -66,9 +66,9 @@
             </div>
             <h2 class="color-grey-h2">ABOUT US</h2>
             <span class="text-under-h2 color-grey-h2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eu nisl facilisis, pretium augue a, semper arcu. Aliquam nec sapien nec nisl porta vestibulum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque lacus ante, aliquet vitae scelerisque nec, interdum et justo. Nullam nec elit et lorem maximus varius. Quisque aliquet, dui gravida dignissim congue, metus nunc ornare ligula, vitae tristique mauris diam vel lectus. Pellentesque consectetur commodo ipsum. Nunc non venenatis turpis. Suspendisse potenti. Nullam eu erat ut purus placerat blandit eu vel nisl. Suspendisse eleifend, erat ut aliquet dictum, tortor est faucibus libero, a posuere quam quam sit amet sapien.</span>
-            <div class="btn-about">
-              <a class="btn" href="#">Contact Us</a>
-              <a class="btn btn-white" href="#">Portfolio</a>
+            <div class="btn-about-row">
+              <a class="btn-about" href="#">Contact Us</a>
+              <a class="btn-about" href="#">Portfolio</a>
             </div>
 
             <div class="about-us-row-items">
