--- a/testhtml/atlantida00/index.html
+++ b/testhtml/atlantida00/index.html
@@ -254,7 +254,7 @@
                         <a class="soc-fb" href="#"><img src="img/ourteam-soc-fb.png" width="11" height="10" alt=""></a>
                         <a class="soc-tw" href="#"><img src="img/ourteam-soc-tw.png" width="11" height="9" alt=""></a>
                         <a class="soc-be" href="#"><img src="img/ourteam-soc-be.png" width="16" height="10" alt=""></a>
-                      </span> height="10" alt=""></a>
+                      </span> 
                   </div>
                 </div>
               </div>
