history/triangles finished

--- a/testhtml/atlantida00/index.html
+++ b/testhtml/atlantida00/index.html
@@ -155,6 +155,7 @@
                   <p class="history-item-text">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sed ipsum pulvinar, consequat ipsum non, sodales augue. Donec dapibus ipsum rutrum congue egestas. Curabitur fringilla tortor non aliquam congue. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
                   </p>
+                  <span class="history-year-point"> </span>
                 </div>
                 <div class="history-item">
                   <span class="history-item-title">
@@ -166,6 +167,7 @@
                   <p class="history-item-text">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sed ipsum pulvinar, consequat ipsum non, sodales augue. Donec dapibus ipsum rutrum congue egestas. Curabitur fringilla tortor non aliquam congue. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
                   </p>
+                  <span class="history-year-point"> </span>
                 </div>
                 <div class="history-item">
                   <span class="history-item-title">
@@ -177,10 +179,13 @@
                   <p class="history-item-text">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sed ipsum pulvinar, consequat ipsum non, sodales augue. Donec dapibus ipsum rutrum congue egestas. Curabitur fringilla tortor non aliquam congue. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
                   </p>
+                  <span class="history-year-point"> </span>
                 </div>
               </div>
 
               <div class="c-divider">
+                <div class="c-line">
+                </div>
                 <div class="c-top">
                   <span>2015</span>
                 </div>
@@ -203,6 +208,7 @@
                   <p class="history-item-text">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sed ipsum pulvinar, consequat ipsum non, sodales augue. Donec dapibus ipsum rutrum congue egestas. Curabitur fringilla tortor non aliquam congue. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
                   </p>
+                  <span class="history-year-point"> </span>
                 </div>
                 <div class="history-item">
                   <span class="history-item-title">
@@ -217,6 +223,7 @@
                   <p class="history-item-text">
                       Praesent id augue in risus molestie euismod molestie id augue. Suspendisse a libero porttitor, lobortis eros ac, varius velit. Praesent sed eros at elit suscipit laoreet vitae condimentum risus.
                   </p>
+                  <span class="history-year-point"> </span>
                 </div>
                 <div class="history-item">
                   <span class="history-item-title">
@@ -228,6 +235,7 @@
                   <p class="history-item-text">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sed ipsum pulvinar, consequat ipsum non, sodales augue. Donec dapibus ipsum rutrum congue egestas. Curabitur fringilla tortor non aliquam congue. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
                   </p>
+                  <span class="history-year-point"> </span>
                 </div>
               </div>
 
@@ -254,7 +262,7 @@
                         <a class="soc-fb" href="#"><img src="img/ourteam-soc-fb.png" width="11" height="10" alt=""></a>
                         <a class="soc-tw" href="#"><img src="img/ourteam-soc-tw.png" width="11" height="9" alt=""></a>
                         <a class="soc-be" href="#"><img src="img/ourteam-soc-be.png" width="16" height="10" alt=""></a>
-                      </span> 
+                      </span>
                   </div>
                 </div>
               </div>
