aboutus/iteam/border updated

--- a/testhtml/atlantida00/index.html
+++ b/testhtml/atlantida00/index.html
@@ -13,7 +13,7 @@
         <div class="container">
           <div class="header-logo">
             <!--<img src="#" height="" width="" alt="" title="">-->
-            <span>ATLANTIDA</span>
+            <a href="index.html">ATLANTIDA</a>
           </div>
           <nav class="main-navigation">
             <ul>
