footer-bg added

--- a/testhtml/atlantida00/index.html
+++ b/testhtml/atlantida00/index.html
@@ -338,7 +338,9 @@
 
       </main>
 
-      <footer class="main-footer">
+      <footer class="footer">
+        <div class="container">
+        </div>
       </footer>
 
 
