--- a/testhtml/atlantida00/index.html
+++ b/testhtml/atlantida00/index.html
@@ -22,7 +22,7 @@
               <li><a href="#services-id">Services</a></li>
               <li><a href="#history-id">History</a></li>
               <li><a href="#ourteam-id">Team</a></li>
-              <li><a href="#">Portfolio</a></li>
+              <li><a href="#portfolio-id">Portfolio</a></li>
               <li><a href="#">Prices</a></li>
               <li><a href="#">Blog</a></li>
               <li><a href="#">Contact</a></li>
@@ -296,9 +296,19 @@
           </div>
         </div>
 
-        <div class="main-portfolio">
+        <div class="portfolio" id="portfolio-id">
           <div class="container">
+            <h2 class="color-grey-h2">portfolio</h2>
+            <span class="text-under-h2">Nullam lobortis, turpis lobortis placerat vehicula, ipsum lacus bibendum dolor, sit amet pretium odio magna eget risus. Phasellus iaculis ultricies duiNullam lobortis, turpis lobortis placerat vehicula, ipsum lacus bibendum dolor, sit amet pretium odio magna eget risus.</span>
+            <ul>
+              <li><a class="active" href="">all</a></li>
+              <li><a href="">website</a></li>
+              <li><a href="">brochures</a></li>
+              <li><a href="">logos</a></li>
+            </ul>
           </div>
+          <div class="portfolio-iteams-row">
+          <div>
         </div>
 
         <div class="main-prices">
