--- a/testhtml/atlantida00/index.html
+++ b/testhtml/atlantida00/index.html
@@ -308,7 +308,7 @@
             </ul>
           </div>
           <div class="portfolio-iteams-row">
-          <div>
+          </div>
         </div>
 
         <div class="main-prices">
